[package]
name = "cascade"
version = "0.1.0"
description = "The Hourly Payroll Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cascade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
